--- a/addons/dynamic_event_manager/plugin.cfg
+++ b/addons/dynamic_event_manager/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="DynamicEventManager"
-description="A dynamic event manager that lets you add events dynamically at runtime using an Events singleton, and an Event class that you can inherit to create event arguments."
+description=" A simple event manager that lets you add and invoke events dynamically at runtime."
 author="fkeyz"
 version="1.0"
-script="dynamic_event_manager.gd"
+script="plugin.gd"
